# hindclaw

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  README.md  TODOS.md  UPSTREAM_HINDSIGHT_COMMIT  package.json
.githooks/: pre-commit
.github/workflows/: ci-cli.yml  ci.yml  deploy-docs.yml  publish-extension.yml  publish-openclaw.yml  publish.yml  release-cli.yml  rust-spec-coherence.yml  version-coherence.yml
docker/: Dockerfile
docs/: access-control.md  bank-config.md  cli.md  configuration.md  development.md
hindclaw-cli/: CHANGELOG.md  Cargo.toml  README.md
hindclaw-cli/src/: api.rs  config.rs  main.rs  output.rs  template_ref.rs  ui.rs
hindclaw-cli/src/commands/: alias.rs  bank_policy.rs  common.rs  group.rs  mod.rs  my_sa.rs  policy.rs  resolve.rs  sa.rs  source.rs  template.rs  user.rs
hindclaw-cli/tests/: alias_test.rs  bank_policy_test.rs  group_test.rs  my_sa_test.rs  policy_test.rs  resolve_test.rs  sa_test.rs  template_test.rs  user_test.rs
hindclaw-cli/tests/common/: mod.rs
hindclaw-clients/: CLAUDE.md  openapi.json
hindclaw-clients/go/: README.md  api_admin.go  api_banks.go  api_default.go  api_templates.go  client.go  go.mod  hindclaw_client.go  integration_test.go  model_api_key_create_response.go  model_api_key_response.go  model_author.go  model_bank_creation_response.go  model_bank_policy_response.go  model_bank_template_config.go  model_bank_template_directive.go  model_bank_template_import_response.go  model_bank_template_manifest.go  model_bank_template_mental_model.go  model_check_update_response.go  model_consolidation_llm_batch_size.go  model_consolidation_source_facts_max_tokens.go  model_consolidation_source_facts_max_tokens_per_observation.go  model_create_api_key_request.go  model_create_bank_from_template_request.go  model_create_group_request.go  model_create_policy_attachment_request.go  model_create_policy_request.go  model_create_sa_key_request.go  model_create_self_service_account_request.go  model_create_service_account_request.go  model_create_source_request.go  model_create_template_request.go  model_create_user_request.go  model_description.go  model_directive_seed.go  model_directive_seed_result.go  model_directive_seeds.go  model_disposition_empathy.go  model_disposition_literalism.go  (+56 more)
hindclaw-clients/python/: hindclaw_client_api_README.md  pyproject.toml
hindclaw-clients/python/.openapi-generator/: FILES
hindclaw-clients/python/hindclaw_client/: __init__.py  client.py
hindclaw-clients/python/hindclaw_client_api/: __init__.py  rest.py
hindclaw-clients/python/hindclaw_client_api/api/: __init__.py  admin_api.py  banks_api.py  default_api.py  templates_api.py
hindclaw-clients/python/hindclaw_client_api/models/: __init__.py  api_key_create_response.py  api_key_response.py  bank_creation_response.py  bank_policy_response.py  bank_template_config.py  bank_template_directive.py  bank_template_import_response.py  bank_template_manifest.py  bank_template_mental_model.py  check_update_response.py  create_api_key_request.py  create_bank_from_template_request.py  create_group_request.py  create_policy_attachment_request.py  create_policy_request.py  create_sa_key_request.py  create_self_service_account_request.py  create_service_account_request.py  create_source_request.py  create_template_request.py  create_user_request.py  directive_seed.py  directive_seed_result.py  entity_label.py  entity_label_value.py  group_summary_response.py  install_template_request.py  list_templates_response.py  marketplace_search_response.py  marketplace_search_result.py  me_profile_response.py  mental_model_seed.py  mental_model_seed_result.py  mental_model_trigger.py  mental_model_trigger_tag_groups_inner.py  model_not.py  patch_template_request.py  policy_attachment_response.py  policy_response.py  (+22 more)
hindclaw-clients/python/tests/: conftest.py  test_raw_generated.py  test_smoke.py  test_wrapper_types.py
hindclaw-clients/rust/: Cargo.toml  README.md  build.rs  openapi.json
hindclaw-clients/rust/src/: lib.rs
hindclaw-clients/rust/tests/: smoke.rs  types.rs
hindclaw-clients/typescript/: jest.config.js  openapi-ts.config.ts  package-lock.json  package.json  tsconfig.json
hindclaw-docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
hindclaw-docs/blog/: 2026-03-20-hello.md  authors.yml
hindclaw-docs/docs/: access-control.md  cli.md  configuration.md  development.md  intro.md
hindclaw-docs/static/: openapi.json
hindclaw-extension/: pyproject.toml
hindclaw-extension/hindclaw_ext/: __init__.py  auth.py  bank_bootstrap.py  db.py  hindsight_client.py  http.py  http_models.py  marketplace.py  models.py  policy_engine.py  policy_models.py  resolver.py  template_models.py  template_ref.py  tenant.py  validator.py  version.py
hindclaw-extension/tests/: conftest.py  helpers.py  test_auth.py  test_bank_bootstrap.py  test_db.py  test_db_policies.py  test_db_sources.py  test_db_sources_scoped.py  test_db_templates.py  test_hindsight_client.py  test_http.py  test_http_banks.py  test_http_install.py  test_http_me_api_keys.py  test_http_me_profile.py  test_http_me_sources.py  test_http_me_templates.py  test_http_models.py  test_http_scope_gates.py  test_http_self_service_sa.py  test_http_sources.py  test_http_templates.py  test_marketplace.py  test_marketplace_integration.py  test_marketplace_template.py  test_models.py  test_policy_engine.py  test_policy_models.py  test_resolver.py  test_template_models.py  test_template_ref.py  test_tenant.py  test_upstream_imports.py  test_validator.py  test_version.py
scripts/: extract-openapi.py  generate-clients.sh  generate-docs-skill.sh  generate-openapi.sh  generate-templates.sh  setup-hooks.sh  sync-upstream-pins.sh
scripts/hooks/: lint.sh
skills/hindclaw-docs/: SKILL.md
src/: client.ts  config.test.ts  config.ts  embed-manager.ts  index.test.ts  index.ts  types.ts  utils.ts
src/cli/: index.ts  init.test.ts  init.ts
src/hooks/: recall.test.ts  recall.ts  retain.test.ts  retain.ts  session-start.test.ts  session-start.ts
src/permissions/: discovery.test.ts  (+3 more)
(+182 files in other folders)
