[package]
name = "hindclaw-cli"
version = "0.1.0"
edition = "2021"
authors = ["Ruben Khachaturov <mr.kha4a2rov@protonmail.com>"]
description = "CLI for managing HindClaw access control"
license = "MIT"
repository = "https://github.com/mrkhachaturov/hindclaw"

[[bin]]
name = "hindclaw"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"

# Colors and styling
colored = "2.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Config directory
dirs = "5.0"

# Interactive prompts
dialoguer = "0.11"

# URL handling
url = "2.5"

[dev-dependencies]
tempfile = "3.10"
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
