[project]
name = "hindclaw-client"
version = "0.1.0"
description = "Python client for Hindclaw access control API"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "aiohttp-retry",
    "urllib3",
    "python-dateutil",
    "typing-extensions",
    "pydantic>=2.0.0",
    "hindsight-client==0.5.1",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hindclaw_client", "hindclaw_client_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--timeout 60"
log_cli = true
